# block-neural-autoregressive-flow

./: README.md  pyproject.toml
bnaf/: __init__.py  activations.py  block_naf.py  chain.py  inverse.py  permutation.py  util.py
experiments/eight_gaussians/: checkpointer.py  dataloader.py  main.py  make_model_fns.py  train_flow.py  train_mlp.py
