[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name =  "bnaf"
description = "Block neural autoregressive flows in Flax"
authors = [{name = "Simon Dirmeier", email = "sfyrbnd@pm.me"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.31",
    "flax>=0.9.0",
    "optax>=0.2.3",
    "ml-collections>=0.1.1",
    "surjectors>=0.3.3",
    "numpyro>=0.15.2",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["bnaf"]

[tool.setuptools.dynamic]
version = {attr = "bnaf.__init__.__version__"}

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.8.0",
    "pip>=24.2",
    "matplotlib>=3.9.2",
    "ruff>=0.6.3",
    "seaborn>=0.13.2",
]

[tool.bandit]
skips = ["B101"]

[tool.ruff]
line-length = 80
exclude = ["*_test.py", "docs/**", "examples/**"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = [
  "UP", "I", "PL", "S"
]
ignore = ["S301", "PLR0913", "S101", "PLR2004", "S603", "S607"]
