[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name =  "bnaf"
description = "Block neural autoregressive flows in Flax"
authors = [{name = "Simon Dirmeier", email = "simd23@pm.me"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.31",
    "flax>=0.9.0",
    "optax>=0.2.3",
    "ml-collections>=0.1.1",
    "surjectors==0.3.3",
    "numpyro>=0.15.2",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
    "wandb>=0.21.1",
]
examples = [
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "wandb>=0.21.1",
]

[tool.setuptools]
packages = ["bnaf"]

[tool.setuptools.dynamic]
version = {attr = "bnaf.__init__.__version__"}

[tool.ruff]
indent-width = 2
line-length = 80

[tool.ruff.lint.pydocstyle]
convention= 'google'
